--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>PreEntrega1Mariani</title>
 </head>
 <body>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
