--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PreEntrega2Mariani</title>
+    <title>PreEntrega3Mariani</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
-    <div class="text-center" >
+    <div class="text-center">
+        <img src="https://media.ambito.com/p/6a2403731b58ba3fe40d6aa9830d405e/adjuntos/239/imagenes/040/264/0040264389/1200x675/smart/dolar-ahorro-inversiones-finanzas.png" width="300" style="display: block; margin: 0 auto;">
         <h1>¡Bienvenidos a Desinfla2!</h1>
         <h3>El lugar donde vas a poder combatir a la inflación</h3>
         <h6>(O al menos intentarlo)</h6>
@@ -20,14 +21,21 @@
                 <input type="text" class="form-control" id="tasaAnual" placeholder="Tip: Algunos bancos la tienen en 91%, otros en 97%">
                 <br>
                 <label for="inflacion" class="form-label">¿Cuál es la inflación interanual?</label>
-                <input type="text" class="form-control" id="inflacion" placeholder="La del mes de mayo fue de 108,8%">
+                <input type="text" class="form-control" id="inflacion" placeholder="Tip: La del mes de mayo fue de 108,8%">
                 <br>
                 <label for="inversion" class="form-label">¿Cuánto dinero estás dispuesto a invertir?</label>
                 <input type="text" class="form-control" id="inversion" placeholder="Bajo tu propio riesgo...">
                 <br>
-            <button type="submit" class="btn btn-primary">Simular plazo fijo</button>
+            <button type="submit" class="btn btn-warning">Simular plazo fijo</button>
         </form>
     </div>
+    <br>
+    <div id="result" class="container-lg text-center"></div>
+    <div id="result2" class="container-lg text-center"></div>
+    <br>
+    <p class="container-lg text-center" id="pResult"></p>
+    <div id="result3" class="container-lg text-center  text-success"></div>
+    <img src="https://png.pngtree.com/png-clipart/20221201/ourmid/pngtree-argentina-flag-with-watercolor-brush-for-world-cup-png-image_6490208.png" width="300" style="display: block; margin: 0 auto;" alt="Argentina">
     <script src="main.js"></script>
     <script src="2.js"></script>
 </body>
