--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PreEntrega3Mariani</title>
+    <title>EntregaFinalMariani</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
@@ -28,6 +28,21 @@
                 <br>
             <button type="submit" class="btn btn-warning">Simular plazo fijo</button>
         </form>
+    </div>
+    <div class="container text-center">
+        <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Tasa Anual</th>
+                <th scope="col">Inflacion</th>
+                <th scope="col">Inversion</th>
+              </tr>
+            </thead>
+            <tbody id="cuerpo">
+
+            </tbody>
+          
     </div>
     <br>
     <div id="result" class="container-lg text-center"></div>
