--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
                 <br>
             <button type="submit" class="btn btn-warning">Simular plazo fijo</button>
         </form>
+        <br>
+    <br>
+    <div id="result" class="container-lg text-center"></div>
+    <div id="result2" class="container-lg text-center"></div>
+    <br>
+    <p class="container-lg text-center" id="pResult"></p>
+    <div id="result3" class="container-lg text-center  text-success"></div>
+    <button class="btn btn-warning" id="historial" onclick="getHistorial()">Ver historial de consultas</button>
     </div>
-    <div class="container text-center">
+    <div class="container text-center" id="historicalTable">
         <table class="table">
             <thead>
               <tr>
@@ -37,19 +45,15 @@
                 <th scope="col">Tasa Anual</th>
                 <th scope="col">Inflacion</th>
                 <th scope="col">Inversion</th>
+                <th scope="col">Resultado1</th>
+                <th scope="col">Resultado2</th>
               </tr>
             </thead>
-            <tbody id="cuerpo">
+            <tbody id="historicalBody">
 
             </tbody>
           
     </div>
-    <br>
-    <div id="result" class="container-lg text-center"></div>
-    <div id="result2" class="container-lg text-center"></div>
-    <br>
-    <p class="container-lg text-center" id="pResult"></p>
-    <div id="result3" class="container-lg text-center  text-success"></div>
     <img src="https://png.pngtree.com/png-clipart/20221201/ourmid/pngtree-argentina-flag-with-watercolor-brush-for-world-cup-png-image_6490208.png" width="300" style="display: block; margin: 0 auto;" alt="Argentina">
     <script src="main.js"></script>
     <script src="2.js"></script>
